--- a/config/database.yml
+++ b/config/database.yml
@@ -81,7 +81,10 @@ test:
 #
 production:
   <<: *default
-  database: aws_oneday_app_production
-  username: postgres
-  password: <%= Rails.application.credentials.db[:password] %>
-  host: <%= Rails.application.credentials.db[:hostname] %>
+  # AWS設定
+  # database: aws_oneday_app_production
+  # username: postgres
+  # password: <%= Rails.application.credentials.db[:password] %>
+  # host: <%= Rails.application.credentials.db[:hostname] %>
+  # Render設定
+  url: <%= ENV['DATABASE_URL'] %>
