Herokuデプロイ用の設定を追加

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,7 +81,12 @@ test:
 #
 production:
   <<: *default
-  database: aws_oneday_app_production
-  username: postgres
-  password: <%= Rails.application.credentials.db[:password] %>
-  host: <%= Rails.application.credentials.db[:hostname] %>
+  # AWS
+  # database: aws_oneday_app_production
+  # username: postgres
+  # password: <%= Rails.application.credentials.db[:password] %>
+  # host: <%= Rails.application.credentials.db[:hostname] %>
+  # herokuデプロイ
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
